test/arrays/compilerErrors/array-delete.good
array-delete.chpl:3: error: 'delete' is not allowed on non-class type int(64)
